# exio

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  coroutine.cpp  read_file.cpp  read_write_file.cpp  timeout.cpp
include/: config.hpp  exception.hpp  exio.hpp  file.hpp  io_context.hpp  sender_factories.hpp
include/file/: concepts.hpp  open.hpp  open_flags.hpp  read_only_file.hpp  sender_factories.hpp  types.hpp
include/io_uring/: env.hpp  io_uring_context.hpp  io_uring_context_base.hpp
include/io_uring/ops/: async_read_some.hpp  async_write_some.hpp  schedule.hpp  schedule_after.hpp
include/posix/file/: file_handle.hpp  open.hpp  open_flags.hpp
include/senders/: async_read.hpp  async_read_some.hpp  async_read_some_at.hpp  async_write_some.hpp  async_write_some_at.hpp
include/senders/__details/: env.hpp
include/timer/: concepts.hpp
include/unix/: file_handle.hpp
tests/: CMakeLists.txt
